crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0409_int_plus_str.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0409]: `+` cannot join `str` and `{integer}`
 --> mem:///main.lu:3:13
  |
3 |     let t = 1 + s
  |             ^ this is `{integer}`
  |
  = note: `+` joins a `str` with a `str` or a `char` (D62). Spell any other conversion inside an
    interpolation hole: `t += "{count}"` formats any primitive.
  = note: each `+` builds a fresh `str` — interpolation's cost model; `std.strbuf` is the builder
    for heavy loops.
