crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0409_str_plus_char.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
assertion_line: 37
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0409]: `+` cannot join `str` and `char`
 --> mem:///main.lu:3:17
  |
3 |     let t = s + 'c'
  |                 ^^^ this is `char`
  |
  = note: `+` joins two `str`s (D62). Spell the conversion inside an interpolation hole: `t +=
    "{count}"` formats any primitive.
  = note: each `+` builds a fresh `str` — interpolation's cost model; `std.strbuf` is the builder
    for heavy loops.
