crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0409_string_plus.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0409]: `+` cannot be applied to `str`
 --> mem:///main.lu:3:16
  |
3 |     let both = first + "lf"
  |                ^^^^^ this is `str`
  |
  = note: `+` works on numbers.
  = note: join strings with interpolation instead: "{first}{second}".
